Recreate response head objects on multiple redirect

The previous response head gets moved when redirecting, which lead to
dereferencing a null pointer on the next redirect.

Fixes: QTBUG-109357
Change-Id: Iaad1c46b8d4ca9720f1749980a9e06337ca0f3d8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit c6b2b5d8038b3ec0de6233c1e21df60ade11c81b)